tests-snapshots/dbc-cantools/long_names_multiple_relations_dumped.snap.stderr
error[E0428]: the name `MsgCaseTest` is defined multiple times
  --> tests-snapshots/dbc-cantools/long_names_multiple_relations_dumped.snap.rs:34:5
   |
32 |     MsgCaseTest(MsgCaseTest),
   |     ------------------------ previous definition of the type `MsgCaseTest` here
33 |     /// msg_case_test
34 |     MsgCaseTest(MsgCaseTest),
   |     ^^^^^^^^^^^^^^^^^^^^^^^^ `MsgCaseTest` redefined here
   |
   = note: `MsgCaseTest` must be defined only once in the type namespace of this enum

error[E0428]: the name `MsgCaseTest` is defined multiple times
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations_dumped.snap.rs:677:1
    |
607 | pub struct MsgCaseTest {
    | ---------------------- previous definition of the type `MsgCaseTest` here
...
677 | pub struct MsgCaseTest {
    | ^^^^^^^^^^^^^^^^^^^^^^ `MsgCaseTest` redefined here
    |
    = note: `MsgCaseTest` must be defined only once in the type namespace of this module

error[E0119]: conflicting implementations of trait `Clone` for type `MsgCaseTest`
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations_dumped.snap.rs:676:10
    |
606 | #[derive(Clone, Copy)]
    |          ----- first implementation here
...
676 | #[derive(Clone, Copy)]
    |          ^^^^^ conflicting implementation for `MsgCaseTest`

error[E0119]: conflicting implementations of trait `Copy` for type `MsgCaseTest`
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations_dumped.snap.rs:676:17
    |
606 | #[derive(Clone, Copy)]
    |                 ---- first implementation here
...
676 | #[derive(Clone, Copy)]
    |                 ^^^^ conflicting implementation for `MsgCaseTest`

error[E0119]: conflicting implementations of trait `TryFrom<&[u8]>` for type `MsgCaseTest`
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations_dumped.snap.rs:704:1
    |
634 | impl core::convert::TryFrom<&[u8]> for MsgCaseTest {
    | -------------------------------------------------- first implementation here
...
704 | impl core::convert::TryFrom<&[u8]> for MsgCaseTest {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `MsgCaseTest`

error[E0119]: conflicting implementations of trait `Frame` for type `MsgCaseTest`
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations_dumped.snap.rs:716:1
    |
646 | impl embedded_can::Frame for MsgCaseTest {
    | ---------------------------------------- first implementation here
...
716 | impl embedded_can::Frame for MsgCaseTest {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `MsgCaseTest`

error[E0592]: duplicate definitions with name `MESSAGE_ID`
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations_dumped.snap.rs:620:5
    |
620 |     pub const MESSAGE_ID: embedded_can::Id = Id::Standard(unsafe {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ duplicate definitions for `MESSAGE_ID`
...
690 |     pub const MESSAGE_ID: embedded_can::Id = Id::Standard(unsafe {
    |     -------------------------------------- other definition for `MESSAGE_ID`

error[E0592]: duplicate definitions with name `MESSAGE_SIZE`
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations_dumped.snap.rs:623:5
    |
623 |     pub const MESSAGE_SIZE: usize = 8;
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ duplicate definitions for `MESSAGE_SIZE`
...
693 |     pub const MESSAGE_SIZE: usize = 8;
    |     ----------------------------- other definition for `MESSAGE_SIZE`

error[E0592]: duplicate definitions with name `new`
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations_dumped.snap.rs:625:5
    |
625 |     pub fn new() -> Result<Self, CanError> {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ duplicate definitions for `new`
...
695 |     pub fn new() -> Result<Self, CanError> {
    |     -------------------------------------- other definition for `new`

error[E0592]: duplicate definitions with name `raw`
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations_dumped.snap.rs:630:5
    |
630 |     pub fn raw(&self) -> &[u8; 8] {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ duplicate definitions for `raw`
...
700 |     pub fn raw(&self) -> &[u8; 8] {
    |     ----------------------------- other definition for `raw`

error[E0034]: multiple applicable items in scope
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations_dumped.snap.rs:63:26
    |
 63 |             MsgCaseTest::MESSAGE_ID => {
    |                          ^^^^^^^^^^ multiple `MESSAGE_ID` found
    |
note: candidate #1 is defined in an impl for the type `MsgCaseTest`
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations_dumped.snap.rs:620:5
    |
620 |     pub const MESSAGE_ID: embedded_can::Id = Id::Standard(unsafe {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: candidate #2 is defined in an impl for the type `MsgCaseTest`
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations_dumped.snap.rs:690:5
    |
690 |     pub const MESSAGE_ID: embedded_can::Id = Id::Standard(unsafe {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0034]: multiple applicable items in scope
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations_dumped.snap.rs:66:26
    |
 66 |             MsgCaseTest::MESSAGE_ID => {
    |                          ^^^^^^^^^^ multiple `MESSAGE_ID` found
    |
note: candidate #1 is defined in an impl for the type `MsgCaseTest`
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations_dumped.snap.rs:620:5
    |
620 |     pub const MESSAGE_ID: embedded_can::Id = Id::Standard(unsafe {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: candidate #2 is defined in an impl for the type `MsgCaseTest`
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations_dumped.snap.rs:690:5
    |
690 |     pub const MESSAGE_ID: embedded_can::Id = Id::Standard(unsafe {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0034]: multiple applicable items in scope
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations_dumped.snap.rs:648:31
    |
648 |         if id.into() != Self::MESSAGE_ID { None } else { data.try_into().ok() }
    |                               ^^^^^^^^^^ multiple `MESSAGE_ID` found
    |
note: candidate #1 is defined in an impl for the type `MsgCaseTest`
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations_dumped.snap.rs:620:5
    |
620 |     pub const MESSAGE_ID: embedded_can::Id = Id::Standard(unsafe {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: candidate #2 is defined in an impl for the type `MsgCaseTest`
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations_dumped.snap.rs:690:5
    |
690 |     pub const MESSAGE_ID: embedded_can::Id = Id::Standard(unsafe {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0034]: multiple applicable items in scope
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations_dumped.snap.rs:663:15
    |
663 |         Self::MESSAGE_ID
    |               ^^^^^^^^^^ multiple `MESSAGE_ID` found
    |
note: candidate #1 is defined in an impl for the type `MsgCaseTest`
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations_dumped.snap.rs:620:5
    |
620 |     pub const MESSAGE_ID: embedded_can::Id = Id::Standard(unsafe {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: candidate #2 is defined in an impl for the type `MsgCaseTest`
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations_dumped.snap.rs:690:5
    |
690 |     pub const MESSAGE_ID: embedded_can::Id = Id::Standard(unsafe {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0034]: multiple applicable items in scope
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations_dumped.snap.rs:718:31
    |
718 |         if id.into() != Self::MESSAGE_ID { None } else { data.try_into().ok() }
    |                               ^^^^^^^^^^ multiple `MESSAGE_ID` found
    |
note: candidate #1 is defined in an impl for the type `MsgCaseTest`
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations_dumped.snap.rs:620:5
    |
620 |     pub const MESSAGE_ID: embedded_can::Id = Id::Standard(unsafe {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: candidate #2 is defined in an impl for the type `MsgCaseTest`
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations_dumped.snap.rs:690:5
    |
690 |     pub const MESSAGE_ID: embedded_can::Id = Id::Standard(unsafe {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0034]: multiple applicable items in scope
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations_dumped.snap.rs:733:15
    |
733 |         Self::MESSAGE_ID
    |               ^^^^^^^^^^ multiple `MESSAGE_ID` found
    |
note: candidate #1 is defined in an impl for the type `MsgCaseTest`
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations_dumped.snap.rs:620:5
    |
620 |     pub const MESSAGE_ID: embedded_can::Id = Id::Standard(unsafe {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: candidate #2 is defined in an impl for the type `MsgCaseTest`
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations_dumped.snap.rs:690:5
    |
690 |     pub const MESSAGE_ID: embedded_can::Id = Id::Standard(unsafe {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
